refactor: 优化 IoT 玩具页面，删除静音功能、调整配置按钮位置、隐藏文档链接

--- a/src/pages/iot-toys/index.css
+++ b/src/pages/iot-toys/index.css
@@ -7,10 +7,7 @@
 }
 
 .settings-container {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  z-index: 1000;
+  display: none;
 }
 
 .iot-toys-container {
